--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -1,7 +1,7 @@
 ---
 ---
 @import "variables";
-@import "designsystem.min";
+// @import "designsystem.min";
 @import "designsystem-resets";
 @import "utility";
 @import "main";
