--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -17,7 +17,7 @@
     <div class="container">
         <div class="row">
             <div class="col-sm-2 text-centered" id="dta-initiative">
-                <a href="https://www.dta.gov.au/"><img src="/assets/images/dta-wordmark-white.png" alt="An initiative of the Digital Transformation Agency"></a>
+                <a href="https://www.dta.gov.au/"><img src="assets/images/dta-wordmark-white.png" alt="An initiative of the Digital Transformation Agency"></a>
             </div>
             <div class="col-sm-10">
                 <nav aria-label="footer">
@@ -35,12 +35,12 @@
         </div>
     </div>
 </footer>
-<script src="/assets/js/jquery-3.5.1.slim.min.js"></script>
-<script src="/assets/js/designsystem.min.js"></script>
-<script src="/assets/js/bootstrap.min.js"></script>
-<script src="/assets/js/jquery.tablesorter.min.js"></script>
+<script src="assets/js/jquery-3.5.1.slim.min.js"></script>
+<script src="assets/js/designsystem.min.js"></script>
+<script src="assets/js/bootstrap.min.js"></script>
+<script src="assets/js/jquery.tablesorter.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/algoliasearch@4.5.1/dist/algoliasearch-lite.umd.js" integrity="sha256-EXPXz4W6pQgfYY3yTpnDa3OH8/EPn16ciVsPQ/ypsjk=" crossorigin="anonymous"></script>
 <script>const search_client = algoliasearch('{{ site.algolia.application_id }}', '{{ site.algolia.search_only_api_key }}'); const search_index = search_client.initIndex('{{ site.algolia.index_name }}');</script>
-<script src="/assets/js/scripts.js"></script>
+<script src="assets/js/scripts.js"></script>
 </body>
 </html>
