--- a/_includes/header.html
+++ b/_includes/header.html
@@ -20,7 +20,7 @@
 <meta name="description" content="{{ excerpt }}">
 <link rel="stylesheet" href="assets/css/styles.css">
 <link rel="canonical" href="{{ page.url | replace:'index.html','' | absolute_url }}">
-<link rel="apple-touch-icon" sizes="180x180" href="./assets/images/favicons/apple-touch-icon.png">
+<link rel="apple-touch-icon" sizes="180x180" href="assets/images/favicons/apple-touch-icon.png">
 <link rel="icon" type="image/png" sizes="32x32" href="assets/images/favicons/favicon-32x32.png">
 <link rel="icon" type="image/png" sizes="194x194" href="assets/images/favicons/favicon-194x194.png">
 <link rel="icon" type="image/png" sizes="192x192" href="assets/images/favicons/android-chrome-192x192.png">
