--- a/_includes/header.html
+++ b/_includes/header.html
@@ -47,7 +47,7 @@
     <div class="container">
         <div class="row">
             <div class="logo col-md-8">
-                <a href="{{ site.url }}/">
+                <a href="{{ site.baseurl }}/">
                     <img class="hidden-print" alt="Australian Government Digital Transformation Agency logo" src="/assets/images/dta.svg" data-fallback="/assets/images/dta-300.png">
                     <h1>{{ site.title }}</h1>
                 </a>
